feat: add style.css

--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>CV</title>
 </head>
 <body>
     <div class="dummy">
-        Здесь будет находиться CV 
-        <a href="https://kuzmishchew.github.io/rsschool-cv/cv" target="_blank">Кузьмищева Максима</a>
+        <div class="dummy__text">
+            <span class="dummy__text_left">На этой странице ничего нет,</span>
+            <span class="dummy__text_right">но скоро будет мой CV</span>
+        </div>
+        <div class="dummy__error">
+            404
+        </div>
+        <a href="https://kuzmishchew.github.io/rsschool-cv/cv" target="_blank" class="dummy__link">Кузьмищев Максим</a>
     </div>
 </body>
 </html>
